* rawvideo.c: Do not use visible_pitch when walking trough the lines. fixes #1021